// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should hide when mouse leave antd disabled Button 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0}
  mouseLeaveDelay={0}
  onVisibleChange={[Function]}
  placement="top"
  prefixCls="ant-tooltip"
  title="xxxxx"
  transitionName="zoom-big-fast"
>
  <Tooltip
    align={Object {}}
    arrowContent={null}
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    builtinPlacements={
      Object {
        "bottom": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tc",
            "bc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomLeft": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomRight": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "left": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cr",
            "cl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftBottom": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftTop": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "right": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cl",
            "cr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightBottom": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightTop": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "top": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bc",
            "tc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topLeft": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topRight": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
      }
    }
    destroyTooltipOnHide={false}
    mouseEnterDelay={0}
    mouseLeaveDelay={0}
    onPopupAlign={[Function]}
    onVisibleChange={[Function]}
    overlay="xxxxx"
    placement="top"
    prefixCls="ant-tooltip"
    title="xxxxx"
    transitionName="zoom-big-fast"
    trigger={
      Array [
        "hover",
      ]
    }
    visible={false}
  >
    <Trigger
      action={
        Array [
          "hover",
        ]
      }
      afterPopupVisibleChange={[Function]}
      arrowContent={null}
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      blurDelay={0.15}
      builtinPlacements={
        Object {
          "bottom": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tc",
              "bc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomLeft": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomRight": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "left": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cr",
              "cl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftBottom": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftTop": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "right": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cl",
              "cr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightBottom": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightTop": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "top": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bc",
              "tc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topLeft": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topRight": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
        }
      }
      defaultPopupVisible={false}
      destroyPopupOnHide={false}
      focusDelay={0}
      getDocument={[Function]}
      getPopupClassNameFromAlign={[Function]}
      hideAction={Array []}
      mask={false}
      maskClosable={true}
      mouseEnterDelay={0}
      mouseLeaveDelay={0}
      onPopupAlign={[Function]}
      onPopupVisibleChange={[Function]}
      overlay="xxxxx"
      popup={[Function]}
      popupAlign={Object {}}
      popupClassName=""
      popupPlacement="top"
      popupStyle={Object {}}
      popupTransitionName="zoom-big-fast"
      popupVisible={false}
      prefixCls="ant-tooltip"
      showAction={Array []}
      title="xxxxx"
      visible={false}
    >
      <div
        id="TriggerContainer"
      >
        <span
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "cursor": "not-allowed",
              "display": "inline-block",
            }
          }
        >
          <Button
            className={null}
            clicked={false}
            disabled={true}
            ghost={false}
            loading={false}
            prefixCls="ant-btn"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
          >
            <button
              className="ant-btn"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              type="button"
            >
              <span>
                Hello world!
              </span>
            </button>
          </Button>
        </span>
      </div>
    </Trigger>
  </Tooltip>
</Tooltip>
`;

exports[`Tooltip should render disabled Button style properly 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  prefixCls="ant-tooltip"
  title="xxxxx"
  transitionName="zoom-big-fast"
>
  <Tooltip
    align={Object {}}
    arrowContent={null}
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    builtinPlacements={
      Object {
        "bottom": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tc",
            "bc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomLeft": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomRight": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "left": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cr",
            "cl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftBottom": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftTop": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "right": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cl",
            "cr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightBottom": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightTop": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "top": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bc",
            "tc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topLeft": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topRight": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
      }
    }
    destroyTooltipOnHide={false}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    onPopupAlign={[Function]}
    onVisibleChange={[Function]}
    overlay="xxxxx"
    placement="top"
    prefixCls="ant-tooltip"
    title="xxxxx"
    transitionName="zoom-big-fast"
    trigger={
      Array [
        "hover",
      ]
    }
    visible={false}
  >
    <Trigger
      action={
        Array [
          "hover",
        ]
      }
      afterPopupVisibleChange={[Function]}
      arrowContent={null}
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      blurDelay={0.15}
      builtinPlacements={
        Object {
          "bottom": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tc",
              "bc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomLeft": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomRight": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "left": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cr",
              "cl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftBottom": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftTop": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "right": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cl",
              "cr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightBottom": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightTop": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "top": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bc",
              "tc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topLeft": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topRight": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
        }
      }
      defaultPopupVisible={false}
      destroyPopupOnHide={false}
      focusDelay={0}
      getDocument={[Function]}
      getPopupClassNameFromAlign={[Function]}
      hideAction={Array []}
      mask={false}
      maskClosable={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      onPopupAlign={[Function]}
      onPopupVisibleChange={[Function]}
      overlay="xxxxx"
      popup={[Function]}
      popupAlign={Object {}}
      popupClassName=""
      popupPlacement="top"
      popupStyle={Object {}}
      popupTransitionName="zoom-big-fast"
      popupVisible={false}
      prefixCls="ant-tooltip"
      showAction={Array []}
      title="xxxxx"
      visible={false}
    >
      <div
        id="TriggerContainer"
      >
        <span
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "cursor": "not-allowed",
              "display": "inline-block",
            }
          }
        >
          <Button
            className={null}
            clicked={false}
            disabled={true}
            ghost={false}
            loading={false}
            prefixCls="ant-btn"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
          >
            <button
              className="ant-btn"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              type="button"
            >
              <span>
                Hello world!
              </span>
            </button>
          </Button>
        </span>
      </div>
    </Trigger>
  </Tooltip>
</Tooltip>
`;

exports[`Tooltip should render disabled Button style properly 2`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  prefixCls="ant-tooltip"
  title="xxxxx"
  transitionName="zoom-big-fast"
>
  <Tooltip
    align={Object {}}
    arrowContent={null}
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    builtinPlacements={
      Object {
        "bottom": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tc",
            "bc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomLeft": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "bottomRight": Object {
          "offset": Array [
            0,
            4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "left": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cr",
            "cl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftBottom": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "bl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "leftTop": Object {
          "offset": Array [
            -4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tr",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "right": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "cl",
            "cr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightBottom": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "br",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "rightTop": Object {
          "offset": Array [
            4,
            0,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "tl",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "top": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bc",
            "tc",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topLeft": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "bl",
            "tl",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
        "topRight": Object {
          "offset": Array [
            0,
            -4,
          ],
          "overflow": Object {
            "adjustX": 1,
            "adjustY": 1,
          },
          "points": Array [
            "br",
            "tr",
          ],
          "targetOffset": Array [
            0,
            0,
          ],
        },
      }
    }
    destroyTooltipOnHide={false}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    onPopupAlign={[Function]}
    onVisibleChange={[Function]}
    overlay="xxxxx"
    placement="top"
    prefixCls="ant-tooltip"
    title="xxxxx"
    transitionName="zoom-big-fast"
    trigger={
      Array [
        "hover",
      ]
    }
    visible={false}
  >
    <Trigger
      action={
        Array [
          "hover",
        ]
      }
      afterPopupVisibleChange={[Function]}
      arrowContent={null}
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      blurDelay={0.15}
      builtinPlacements={
        Object {
          "bottom": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tc",
              "bc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomLeft": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "bottomRight": Object {
            "offset": Array [
              0,
              4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "left": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cr",
              "cl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftBottom": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "bl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "leftTop": Object {
            "offset": Array [
              -4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tr",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "right": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "cl",
              "cr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightBottom": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "br",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "rightTop": Object {
            "offset": Array [
              4,
              0,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "tl",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "top": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bc",
              "tc",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topLeft": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "bl",
              "tl",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
          "topRight": Object {
            "offset": Array [
              0,
              -4,
            ],
            "overflow": Object {
              "adjustX": 1,
              "adjustY": 1,
            },
            "points": Array [
              "br",
              "tr",
            ],
            "targetOffset": Array [
              0,
              0,
            ],
          },
        }
      }
      defaultPopupVisible={false}
      destroyPopupOnHide={false}
      focusDelay={0}
      getDocument={[Function]}
      getPopupClassNameFromAlign={[Function]}
      hideAction={Array []}
      mask={false}
      maskClosable={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      onPopupAlign={[Function]}
      onPopupVisibleChange={[Function]}
      overlay="xxxxx"
      popup={[Function]}
      popupAlign={Object {}}
      popupClassName=""
      popupPlacement="top"
      popupStyle={Object {}}
      popupTransitionName="zoom-big-fast"
      popupVisible={false}
      prefixCls="ant-tooltip"
      showAction={Array []}
      title="xxxxx"
      visible={false}
    >
      <div
        id="TriggerContainer"
      >
        <span
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "cursor": "not-allowed",
              "display": "block",
            }
          }
        >
          <Button
            className={null}
            clicked={false}
            disabled={true}
            ghost={false}
            loading={false}
            prefixCls="ant-btn"
            style={
              Object {
                "pointerEvents": "none",
              }
            }
          >
            <button
              className="ant-btn"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "pointerEvents": "none",
                }
              }
              type="button"
            >
              <span>
                Hello world!
              </span>
            </button>
          </Button>
        </span>
      </div>
    </Trigger>
  </Tooltip>
</Tooltip>
`;
